# XMath

./: CMakeLists.txt
src/: CMakeLists.txt  precision.h  xmath.h
src/linear_algebra/: CMakeLists.txt  linear_algebra.h  matrix.cpp  matrix.h  matrix_identity.cpp  matrix_identity.h  matrix_multiplication.cpp  matrix_multiplication.h  matrix_precision.h  matrix_transpose.cpp  matrix_transpose.h
src/linear_algebra/misc/: CMakeLists.txt  matrix_ostream.cpp  matrix_ostream.h
tests/: CMakeLists.txt  main.cpp  tests_xmath.h
tests/linear_algebra/: CMakeLists.txt  tests_linear_algebra.h  tests_matrix.cpp  tests_matrix_identity.cpp  tests_matrix_multiplication.cpp  tests_matrix_transpose.cpp
